// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksTableReducer reducer should handle SELECT_ROWS 1`] = `
Object {
  "tasksTableQuery": Object {
    "modalStatus": "CLOSED",
    "selectedRows": Array [
      1,
      2,
      3,
      4,
      5,
      6,
      7,
    ],
  },
}
`;

exports[`TasksTableReducer reducer should handle TASKS_TABLE_SELECTED_MODAL 1`] = `
Object {
  "tasksTableQuery": Object {
    "modalStatus": "RESUME",
    "selectedRows": Array [],
  },
}
`;

exports[`TasksTableReducer reducer should handle TASKS_TABLE_SET_PAGINATION 1`] = `
Object {
  "tasksTableQuery": Object {
    "modalStatus": "CLOSED",
    "selectedRows": Array [],
  },
}
`;

exports[`TasksTableReducer reducer should handle TASKS_TABLE_SET_SORT 1`] = `
Object {
  "tasksTableQuery": Object {
    "modalStatus": "CLOSED",
    "selectedRows": Array [],
  },
}
`;

exports[`TasksTableReducer reducer should handle TASKS_TABLE_SUCCESS 1`] = `
Object {
  "tasksTableQuery": Object {
    "actionName": undefined,
    "itemCount": 120,
    "modalStatus": "CLOSED",
    "pagination": Object {
      "page": 3,
      "perPage": 12,
    },
    "selectedRows": Array [],
  },
}
`;

exports[`TasksTableReducer reducer should handle UNSELECT_ALL_ROWS 1`] = `
Object {
  "tasksTableQuery": Object {
    "modalStatus": "CLOSED",
    "selectedRows": Array [],
  },
}
`;

exports[`TasksTableReducer reducer should handle UNSELECT_ROWS 1`] = `
Object {
  "tasksTableQuery": Object {
    "modalStatus": "CLOSED",
    "selectedRows": Array [],
  },
}
`;

exports[`TasksTableReducer reducer should return the initial state 1`] = `
Object {
  "tasksTableQuery": Object {
    "modalStatus": "CLOSED",
    "selectedRows": Array [],
  },
}
`;
